<resources>
    <string name="app_name">ProfTracker</string>
    <string name="prof_tracker">Prof Tracker</string>
    <string name="logo">logo</string>
    <string name="prix">Prix</string>
    <string name="profile_picture">profile_picture</string>
    <string name="professeur_populaire">Professeur Populaire</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="position">Position</string>
    <string name="contacter">Contacter</string>
    <string name="exemple1">3.5 km - Nice</string>
    <string name="exemple2">Ekko Lier</string>
    <string name="exemple3">Jeune prodige des rues malfamées de Zaun, Ekko manipule le temps.</string>
    <string name="forgottenPassword">Mot de passe oublié ?</string>
    <string name="noAccount">Pas de compte ? Créer un compte</string>
    <string name="havingAccount">Déjà un compte ? Se connecter</string>
    <string name="login">Se connecter</string>
    <string name="register">Créer un compte</string>
    <string name="mail">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="username">Nom de l\'utilisateur</string>
    <string name="nom_de_l_utilisateur">Nom de l\'utilisateur</string>
    <string name="key">key</string>
    <array name="initial_slider_values">
        <item>25</item>
        <item>45</item>
    </array>
    <string name="noteetoile">"Note moyenne : ⭐ "</string>
    <string name="background">BACKGROUND</string>
    <string name="mati_res_enseign_es">Matières enseignées</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié</string>
    <string name="veuillez_saisir_l_adresse_email_associ_e_votre_compte_pour_recevoir_un_lien_de_r_initialisation_de_mot_de_passe">Veuillez saisir l\'adresse email associée à votre compte pour recevoir un lien de réinitialisation de mot de passe.</string>
    <string name="email">Email</string>
    <string name="envoyer">Envoyer</string>
    <string name="retour_la_connexion">Retour à la connexion</string>
    <string name="image_bibliotheque">Image Bibliotheque</string>
    <string name="book">book</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="filtres">Filtres :</string>
    <string name="fran_ais">Français</string>
    <string name="math_matiques">Mathématiques</string>
    <string name="physique">Physique</string>
    <string name="philosophie">Philosophie</string>
    <string name="notifications_1">Notifications (1)</string>
    <string name="a_comment">a commenté :</string>
    <string name="souhaite_avoir_un_cours_de">Souhaite avoir un cours de</string>
    <string name="imageprofile">imageProfile</string>
    <string name="est_lui">estLui</string>
</resources>