<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/profilepicture"
            android:contentDescription="@string/profile_picture"
            android:background="@color/cardview_dark_background"
            />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/black"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profilepicture"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/logoposition"
            android:contentDescription="@string/position"
            android:background="@color/black"
            />
        <TextView
            android:layout_width="300sp"
            android:layout_height="20sp"
            app:layout_constraintTop_toTopOf="@id/logoposition"
            app:layout_constraintStart_toEndOf="@id/logoposition"
            android:layout_marginLeft="10dp"
            android:text="@string/exemple1"
            />

        <TextView
            android:layout_width="250sp"
            android:layout_height="60sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/logoposition"
            app:layout_constraintStart_toStartOf="@id/logoposition"
            android:id="@+id/nomProfile"
            android:text="@string/exemple2"
            android:textSize="40sp"
            />
        <Button
            android:layout_width="120dp"
            android:layout_height="60sp"
            app:layout_constraintStart_toEndOf="@id/nomProfile"
            app:layout_constraintTop_toTopOf="@id/nomProfile"
            android:text="@string/contacter"/>

        <ListView
            android:layout_width="350sp"
            android:layout_height="40sp"
            app:layout_constraintTop_toBottomOf="@id/nomProfile"
            app:layout_constraintStart_toStartOf="@id/nomProfile"
            android:id="@+id/listCompetence"
            android:orientation="horizontal"
            android:background="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/listCompetence"
            android:text="@string/exemple3"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>