<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activitites.ProfileActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="400sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/profilepicture"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/profile_picture"
                    android:background="@color/cardview_dark_background"
                    />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/logo"
                    />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profilepicture"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:id="@+id/logoposition"
                    android:contentDescription="@string/position"
                    android:background="@drawable/placeholder"
                    />
                <TextView
                    android:id="@+id/localisation"
                    android:layout_width="300sp"
                    android:layout_height="20sp"
                    app:layout_constraintTop_toTopOf="@id/logoposition"
                    app:layout_constraintStart_toEndOf="@id/logoposition"
                    android:layout_marginStart="10dp"
                    android:text="@string/exemple1"
                    />

                <TextView
                    android:id="@+id/nomProfile"
                    android:layout_width="350sp"
                    android:layout_height="60sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/exemple2"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="@id/logoposition"
                    app:layout_constraintTop_toBottomOf="@id/logoposition" />

                <TextView
                    android:id="@+id/permiereMatiere"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/deuxiemeMatiere"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nomProfile" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/livre_ouvert_fill"
                    android:contentDescription="@string/book"
                    app:layout_constraintBottom_toBottomOf="@+id/deuxiemeMatiere"
                    app:layout_constraintEnd_toStartOf="@+id/deuxiemeMatiere"
                    app:layout_constraintStart_toEndOf="@+id/permiereMatiere"
                    app:layout_constraintTop_toTopOf="@+id/deuxiemeMatiere" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/livre_ouvert_fill"
                    android:contentDescription="@string/book"
                    app:layout_constraintBottom_toBottomOf="@+id/troisiemeMatiere"
                    app:layout_constraintEnd_toStartOf="@+id/troisiemeMatiere"
                    app:layout_constraintStart_toEndOf="@+id/deuxiemeMatiere"
                    app:layout_constraintTop_toTopOf="@+id/deuxiemeMatiere" />

                <TextView
                    android:id="@+id/deuxiemeMatiere"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:textSize="14sp"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    app:layout_constraintStart_toEndOf="@+id/permiereMatiere"
                    app:layout_constraintEnd_toStartOf="@id/troisiemeMatiere"
                    app:layout_constraintTop_toTopOf="@+id/permiereMatiere"
                    android:textAlignment="center"
                    />


                <TextView
                    android:id="@+id/troisiemeMatiere"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:textSize="14sp"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/deuxiemeMatiere"
                    app:layout_constraintTop_toTopOf="@+id/permiereMatiere" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:text="@string/exemple3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/permiereMatiere" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/noteetoile"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView4"
                    android:layout_margin="10dp"
                    android:text="@string/noteetoile"
                    android:textSize="20sp"
                    />

                <ListView
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/noteetoile"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="200dp"
                    android:id="@+id/listeViewCommentaire"
                    android:orientation="vertical">
                </ListView>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_margin="10dp"
                    android:id="@+id/contacter"
                    app:layout_constraintStart_toStartOf="@id/listeViewCommentaire"
                    app:layout_constraintTop_toBottomOf="@id/listeViewCommentaire"
                    android:text="@string/contacter"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:layout_constraintTop_toBottomOf="@id/contacter"
                    app:layout_constraintStart_toStartOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>