<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activitites.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_tracker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_picture"/>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!-- Label "Filtre" -->
    <TextView
        android:id="@+id/filterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filtre : "
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp" />

    <!-- Scroll View Horizontale -->
    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterLabel">

        <!-- Boutons pour filtrer par matière -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subjectFilterLayout"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFrancais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Français"
                android:layout_marginStart="8dp"/>

            <Button
                android:id="@+id/buttonMathematiques"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mathématiques"
                android:layout_marginStart="8dp"/>

            <Button
                android:id="@+id/buttonHistoire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Histoire"
                android:layout_marginStart="8dp"/>

            <Button
                android:id="@+id/buttonInformatique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Informatique"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>